--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ set(EXECUTABLE_OUTPUT_PATH ../)
 
 find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
 
+link_directories(${PROJECT_SOURCE_DIR}/lib_helpers)
+add_subdirectory(lib_helpers)
+
 link_directories(${PROJECT_SOURCE_DIR}/lib_window)
 add_subdirectory(lib_window)
 
@@ -20,5 +23,5 @@ add_subdirectory(lib_level_screen)
 
 add_executable (game main.cpp)
 
-target_link_libraries(game window title_screen stage_screen level_screen)
+target_link_libraries(game helpers window title_screen stage_screen level_screen)
 target_link_libraries (game sfml-system sfml-window sfml-graphics sfml-network sfml-audio)
