Started working on sandbox mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.1)
 project (game)
 
-SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread -Wall")
+SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -Wall")
 set(EXECUTABLE_OUTPUT_PATH ../)
 
 find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
@@ -14,16 +14,22 @@ add_subdirectory(lib_helpers)
 link_directories(${PROJECT_SOURCE_DIR}/lib_window)
 add_subdirectory(lib_window)
 
+link_directories(${PROJECT_SOURCE_DIR}/lib_selection_screen)
+add_subdirectory(lib_selection_screen)
+
 link_directories(${PROJECT_SOURCE_DIR}/lib_title_screen)
 add_subdirectory(lib_title_screen)
 
 link_directories(${PROJECT_SOURCE_DIR}/lib_stage_screen)
 add_subdirectory(lib_stage_screen)
 
+link_directories(${PROJECT_SOURCE_DIR}/lib_sandbox_screen)
+add_subdirectory(lib_sandbox_screen)
+
 link_directories(${PROJECT_SOURCE_DIR}/lib_level_screen)
 add_subdirectory(lib_level_screen)
 
 add_executable (game main.cpp)
 
-target_link_libraries(game helpers window title_screen stage_screen level_screen)
+target_link_libraries(game title_screen stage_screen sandbox_screen level_screen)
 target_link_libraries (game sfml-system sfml-window sfml-graphics sfml-network sfml-audio)
