--- a/lib_stage_screen/CMakeLists.txt
+++ b/lib_stage_screen/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_library(stage_screen "stage_screen.cpp" "stage.cpp" )
-target_link_libraries(stage_screen window)
+add_library(stage_screen "stage_screen.cpp" )
+target_link_libraries(stage_screen selection_screen)
