level editor mostly complete

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,10 @@ add_subdirectory(lib_sandbox_screen)
 link_directories(${PROJECT_SOURCE_DIR}/lib_level_screen)
 add_subdirectory(lib_level_screen)
 
+link_directories(${PROJECT_SOURCE_DIR}/lib_level_editor_screen)
+add_subdirectory(lib_level_editor_screen)
+
 add_executable (game main.cpp)
 
-target_link_libraries(game title_screen stage_screen sandbox_screen level_screen)
+target_link_libraries(game title_screen stage_screen sandbox_screen level_screen level_editor_screen)
 target_link_libraries (game sfml-system sfml-window sfml-graphics sfml-network sfml-audio)
