Added finish tile and win condition to level screen, dialog pops up on level completion

--- a/lib_window/CMakeLists.txt
+++ b/lib_window/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_library(window "window.cpp" "button.cpp" "text_button.cpp" "image_button.cpp" "style.cpp")
+add_library(window "window.cpp" "button.cpp" "dialog.cpp" "text_button.cpp" "image_button.cpp" "style.cpp")
 target_link_libraries(window helpers)
